# Rowplane

./: .env.example  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
benchmarks/: README.md  __init__.py  framework_matrix.py  openai_client.py  report.py  requirements-frameworks.txt  requirements.txt  run.py  scenarios.py  scoring.py  toolbox.py  types.py
benchmarks/adapters/: __init__.py  base.py  competitors.py  pg_agent_adapter.py  plain_openai_adapter.py  rowplane_adapter.py
benchmarks/reports/: usefulness_benchmark.md
benchmarks/results/: latest.json
db/migrations/: 001_init.sql  002_multi_agent.sql  003_management_views.sql  004_sql_native_runtime.sql  005_dynamic_contracts.sql  006_schema_validator_alignment.sql  007_sql_work_scheduler.sql  008_task_dependencies.sql  009_scheduler_policies.sql  010_runtime_budgets.sql  011_model_call_reservations.sql  012_model_call_completion.sql  013_agent_intents.sql
docs/: REFERENCE.md  SCALING.md  TUTORIAL.md
examples/: postgres_showcase.py  quickstart_sample.py
tests/: helpers.py  test_approvals.py  test_benchmarks.py  test_commands.py  test_developer_api.py  test_docker_postgres_assets.py  test_framework_intent_adapters.py  test_intents.py  test_lease_worker.py  test_management_api.py  test_management_web_assets.py  test_memory_eval.py  test_multi_agent_worker.py  test_openai_adapter.py  test_openai_agents_adapter.py  test_postgres_migration.py  test_postgres_real_use_cases.py  test_postgres_sql_native_runtime.py  test_sample_use_cases.py  test_states.py  test_tool_executor.py  test_worker.py
(+113 files in other folders)
